--- a/cvjs/index.html
+++ b/cvjs/index.html
@@ -16,11 +16,11 @@
 <a href="./src/components/movies.html" class="link">
   <div class="window movies"></div>
 </a>
-<a href="./src/components/draw.html" class="link">
-  <div class="window draw"></div>
+<a href="./src/components/canvasBool.html" class="link">
+  <div class="window bool">canvas bools</div>
 </a>
-<a href="./src/components/" class="link">
-  <div class="window"></div>
+<a href="./src/components/canvasGravity.html" class="link">
+  <div class="window gravity"></div>
 </a><a href="./src/components/" class="link">
   <div class="window"></div>
 </a><a href="./src/components/" class="link">
